--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.4.1
 amqplib==1.0.2
 anyjson==0.3.3
 billiard==2.7.3.12
+boto==2.5.2
 celery==3.0.6
 celery-with-redis==3.0
 dj-database-url==0.2.1
@@ -9,6 +10,7 @@ django-celery==3.0.6
 django-celery-with-redis==3.0
 django-crispy-forms==1.1.4
 django-redis-cache==0.9.5
+django-storages==1.1.5
 gunicorn==0.14.6
 hiredis==0.1.1
 kombu==2.4.0
